--- a/laba2/public/style.css
+++ b/laba2/public/style.css
@@ -54,47 +54,76 @@ body{
 .fon{
     width: 100%;
     height: 400px;
-    background:url(/image/bac.jpg);}
+    background: white;
+    background:url(/image/1463460329147520958.jpg);
+}
 .con{
     width: 100%;
     height: 40px;
-    background: silver;
+    background: url(logos.png),silver;
 }
 .info{
     width: 100%;
-    height: 500px;
+    height: 600px;
     background: white;
 }
 .fon-info{
     width: 1500px;
     height: 100%;
     display: flex;
+    flex-direction: row;
     justify-content:center;
     align-items: normal;
-    cursor: pointer;
-}
-.simvl{
-    width: 500px;
-    height: 100%;
-    display: flex;
-    justify-content:center;
-    align-items: normal;
-    background:url(/image/bac.jpg);
-}
-.c{
-    width: 150px;
-    height: 700px;
-    display: flex;
-    justify-content:left;
-    align-items: center;
-    display: flex;
     cursor: pointer;
 }
 .d{
+    width: 100px;
+    height: 5%;
+    display: flex;
+    justify-content:center;
+    align-items: normal;
+    cursor: pointer;
     background: blue;
     border-radius: 6px;
     color: white;
-    font-weight:bolder;
-    text-shadow: black 0 0 4px;
-    border: 1px solid rgba(0,0,0,.3);
+}
+.a{
+    width: 300px;
+    height: 700px;
+    display: flex;
+    justify-content:center;
+    align-items: normal;
+    padding-top: 100px;
+    color: white;
+}
+.list_elem{
+    width: 30%;
+    height: 300px;
+    display: inline-block;
+    text-align: center;
+    margin: 14px;
+}
+.list_div p{
+    font-size: 20pt;
+    margin-top: 20px;
+}
+
+.list_standart_p{
+    font-size: 10pt;
+    color: #9a9a9a;
+}
+.list_h{
+    width: 30%;
+    height: 50px;
+    display: inline-block;
+    text-align: center;
+    margin: 14px;
+    cursor: pointer;
+    background: blue;
+    border-radius: 6px;
+    color: white;
+}
+.link_list{
+    margin-top: 120px;
+    margin-left: 800px;
 }
